package NRichContent.NProto;

message TOfflineCacheRecord
{
    optional bytes Url = 1;
    optional bytes FinalUrl = 2;
    optional bytes Content = 3;
    optional bytes MimeType = 4;
    optional int32 Language = 5;
    optional int32 Encoding = 6;
    optional uint32 ImageWidth = 7;
    optional uint32 ImageHeight = 8;

    optional int32 HttpCode = 100;
}
